# GRUMPS

./: CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml
conda-build/grumps/: build.sh  meta.yaml
conda-build/py-grumps/: build.sh  meta.yaml
conda-build/r-grumps/: build.sh  meta.yaml
conda_build/: meta.yaml
data/: Figure 2.tif  Figure_3.tif
scripts/: distmat_converter  grumps  medoid_identifier  r_grumps
src/grumps/: CHANGELOG.md  README.md  __about__.py  __init__.py
src/grumps/api/: __init__.py  cliqueMode.py  pipeLine.py  regularMode.py  removerMode.py  sigmaMode.py  smallMode.py  summaryMode.py  targetMode.py
src/grumps/core/: argParse.py  cleaners.py  cli.py  cli2.py  clique.py  distmat_converter.py  grumpsObj.py  shared.py  summary.py
src/grumps/modes/: cliqueMode.py  modes.py  regularMode.py  removerMode.py  sigmaMode.py  smallMode.py  summaryMode.py  targetMode.py
